Sua phai giua hai noi

--- a/TTFPortal/Views/NhanSu/CapNhatHinhNen.cshtml
+++ b/TTFPortal/Views/NhanSu/CapNhatHinhNen.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = Resources.Menu.NhanSuCapNhatHinhAnh;
-    string ddd = " test but lan 1";
+    string ddd = " test but lan 1 Tao muôn luu lần nua";
 }
 
 @section Link{
