Thêm menu nhân sự ca làm việc

--- a/TTFPortal/Views/Shared/_Layout.cshtml
+++ b/TTFPortal/Views/Shared/_Layout.cshtml
@@ -517,6 +517,14 @@
                                                                     <span class="menu-text">@Resources.Menu.CongCaDem</span>
                                                                 </a>
                                                             </li>
+                                                            <li class="menu-item" aria-haspopup="true">
+                                                                <a href="@Url.Action("QuanLyCalamViec", "NhanSuCaLamViec")" class="menu-link">
+                                                                    <i class="menu-bullet menu-bullet-dot">
+                                                                        <span></span>
+                                                                    </i>
+                                                                    <span class="menu-text">@Resources.Menu.CongGioLamChuan</span>
+                                                                </a>
+                                                            </li>
                                                         }
                                                     </ul>
                                                 </div>
